syntax = "proto3";

package user;

service User {
  rpc UserInformation (UserRequest) returns (UserResponse) {}
}

message UserResponse {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
  int64 id = 5;
}

message UserRequest {
  int64 id = 1;
}
